# scitex-sh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  L7_PILOT_TRIGGER.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  dep-hygiene-smoke.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  l7-self-hosted-smoke.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  scitex-sh-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_sh/: __init__.py  _execute.py  _security.py  _shell_legacy.py  _types.py
src/scitex_sh/_skills/scitex-sh/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_sh/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_sh/_sphinx_html/.doctrees/: api.doctree  environment.pickle  index.doctree
src/scitex_sh/_sphinx_html/.doctrees/api/: scitex_sh.doctree
src/scitex_sh/_sphinx_html/_modules/: index.html  scitex_sh.html
src/scitex_sh/_sphinx_html/_sources/: index.rst.txt
src/scitex_sh/_sphinx_html/api/: scitex_sh.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py
tests/scitex_sh/: test___init__.py  test__execute.py  test__security.py  test__types.py
(+3 files in other folders)
